# Toretto

./: .gitignore  README.md  main_launches.txt  parametros_pro.txt
Prerrequisites/docker/: Dockerfile  README.md
Prerrequisites/model_car/: .bashrc  copyModel.sh  homoMat4.yaml
Prerrequisites/model_car/catkin_ws/: replace.sh  replace_wifi.sh
Prerrequisites/model_car/catkin_ws/src/lines/: CMakeLists.txt
Prerrequisites/model_car/catkin_ws/src/lines/src/: LinesDetector.cpp
catkin_ws_previous/: replace_wifi.sh
catkin_ws_previous/src/navigation/: CMakeLists.txt
catkin_ws_previous/src__/navigation/: package.xml
catkin_ws_user/: Matrix.yaml  Matrix2.yaml  MatrixAngosta.yaml  homoMat4.yaml  replace.sh  root@192.168.43.102
catkin_ws_user/src/automodel_line_detector/: CMakeLists.txt  package.xml
catkin_ws_user/src/config_files/: CMakeLists.txt  package.xml  toretto.xml
catkin_ws_user/src/cross/: CMakeLists.txt  package.xml
catkin_ws_user/src/cross/launch/: cross.launch
catkin_ws_user/src/cross/src/: CrossDetector.cpp  CrossDetector.h  CrossDetector_prev.cpp  CrossDetector_prev.h  cross_node.cpp
catkin_ws_user/src/joystick_teleop/: package.xml
catkin_ws_user/src/lane_detection/: CMakeLists.txt  package.xml
catkin_ws_user/src/lane_detection/launch/: lane.launch  lane_bag.launch  lane_hough.launch  lane_odroid.launch  lane_tmr.launch  launch_odroid.launch
catkin_ws_user/src/lane_detection/src/: LinesDetector.h  lane_detection.cpp  lane_detection.h  lane_detection_hough.cpp  lane_detection_node.cpp  lines_node.cpp
catkin_ws_user/src/lane_tracking/: CMakeLists.txt  package.xml
catkin_ws_user/src/laser_scan/: CMakeLists.txt  package.xml
(+154 files in other folders)
